# RubiksCubeGL

./: CMakeLists.txt  README.md  main.cpp
include/logic/: Cube.h  RubiksCube.h  Skybox.h  Structures.h
include/utils/: Camera.h  Error.h  Program.h  Texture.h
shaders/: RubiksCubeFS.glsl  RubiksCubeVS.glsl  SkyboxVS.glsl
